--- a/Tugas_3_ML_ann_055_059.ipynb
+++ b/Tugas_3_ML_ann_055_059.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "Tugas 3_ML_ann_055_059",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPbgT5YmDtnu8gbs3ZO+4lh",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/MrezaFd/Tugas-Besar-ML-059-055-/blob/main/Tugas_3_ML_ann_055_059.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
@@ -43,7 +55,7 @@
         "from google.colab import files #import library\n",
         "files.upload() #upload file, dalam kasus praktikum kali ini yang di upload file kaggle.json"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -106,7 +118,7 @@
         "    json.dump(api_token, file)\n",
         "!chmod 600 /root/.kaggle/kaggle.json"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +139,7 @@
         "!cp kaggle.json ~/.kaggle/ #copy file kaggle.json upload tadi ke directory baru\n",
         "!chmod 600 ~/.kaggle/kaggle.json #berikan izin untuk file kaggle.json"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -143,7 +155,7 @@
         "#Unduh dataset\n",
         "!kaggle datasets download -d fanconic/skin-cancer-malignant-vs-benign"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +186,7 @@
         "  zip.extractall() #ini kalo gk salah buat tempat hasil nya. karena gak ada, ya default ke content\n",
         "  print('Berhasil') #ini print"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -211,7 +223,7 @@
         "print (\"Jumlah Test Benign :\"+ str(len(test_b))) #print jumlah tes benign\n",
         "print (\"Jumlah Test Malignant :\"+ str(len(test_m))) #print jumlah tes malignant"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,7 +290,7 @@
         "    \n",
         "plt.show()#menampilkan image dalam canvas"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -353,7 +365,7 @@
         "train_data = np.array(train_data) #data diubah ke array\n",
         "train_label = np.array(train_label) #data diubah ke array"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -379,7 +391,7 @@
         "test_data = np.array(test_data) #data diubah ke array\n",
         "test_label = np.array(test_label) #data diubah ke array"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -397,7 +409,7 @@
         "print(\"Test Data = \", test_data.shape) #cek ukuran, shape nya intinya\n",
         "print(\"Test Label = \", test_label.shape) #cek ukuran, shape nya intinya"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -427,7 +439,7 @@
         "x_test = test_data.astype('float32') / 255.0 #pembagian 255 karena rgb itu ada 255 makanya di bagi 255 biar hasil nya antara 0-1, berfungsi untuk memudahkan komp membaca data. kenapa float32 karena kalo 64/255 itu hasil nya float, kalo int nnti dibulatkan\n",
         "print(\"Data setelah di-normalisasi \", x_train[0][0][0]) #cuma print"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +473,7 @@
         "print(\"Label setelah di-encoder \", y_train[200:208]) #cuma print\n",
         "print(\"Label setelah di-encoder \", y_train[2500:2508]) #cuma print"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -494,7 +506,7 @@
         "from tensorflow.keras import layers\n",
         "from tensorflow.keras import Model"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +533,7 @@
         "model = Model(img_input, output)\n",
         "print(model.summary())"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -570,7 +582,7 @@
         "              loss='sparse_categorical_crossentropy', #gak terlalu paham, tapi intinya dari hasil riset dari google kalo softmax baik nya pake ini\n",
         "              metrics=['acc'])"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +607,7 @@
         "H = model.fit(x_train, y_train, batch_size=32, epochs=60, validation_data=(x_test, y_test))\n",
         "#model nya di fit dengan 32 batch tiap 1 iterasi, dan yang diminta untuk mesin jalan sebanyak 60 epocs/iterasi "
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +767,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -790,7 +802,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -823,7 +835,7 @@
         "print('model 1') #ini print\n",
         "print(classification_report(y_test,  labels, target_names=target_names)) #ini print classification report"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
