--- a/Tugas_3_ML_ann_055_059.ipynb
+++ b/Tugas_3_ML_ann_055_059.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Tugas 3_ML_ann_055_059",
       "provenance": [],
-      "authorship_tag": "ABX9TyPbgT5YmDtnu8gbs3ZO+4lh",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOSSSH+wko4joo8cLtitw1u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +53,7 @@
         "outputId": "5f1fe3b5-0b02-4038-f616-cad58e8a5aee"
       },
       "source": [
-        "from google.colab import files #import library\n",
+        "from google.colab import files #import librarysjajsjasjsajsjajasjasjaj\n",
         "files.upload() #upload file, dalam kasus praktikum kali ini yang di upload file kaggle.json"
       ],
       "execution_count": null,
