--- a/Tugas_3_ML_ann_055_059.ipynb
+++ b/Tugas_3_ML_ann_055_059.ipynb
@@ -6,7 +6,7 @@
       "name": "Tugas 3_ML_ann_055_059",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOSSSH+wko4joo8cLtitw1u",
+      "authorship_tag": "ABX9TyPNaGsGfS4+ixRhWZN6sIaI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
         "outputId": "5f1fe3b5-0b02-4038-f616-cad58e8a5aee"
       },
       "source": [
-        "from google.colab import files #import librarysjajsjasjsajsjajasjasjaj\n",
+        "from google.colab import files #import lib\n",
         "files.upload() #upload file, dalam kasus praktikum kali ini yang di upload file kaggle.json"
       ],
       "execution_count": null,
