--- a/neural_network/convolutional_neural_network.ipynb
+++ b/neural_network/convolutional_neural_network.ipynb
@@ -13,7 +13,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -33,30 +34,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TYG8HEb3Dkpa",
-        "outputId": "14ab159b-54cb-4335-b77b-c315ed422ece"
+        "outputId": "3a539db1-6ef0-42c4-bc9b-92d0dcb2ba53"
       },
       "source": [
         "# Download dataset\n",
         "!wget --no-check-certificate \\\n",
-        "    https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip \\\n",
-        "    -O /tmp/cats_and_dogs_filtered.zip"
+        "    https://drive.google.com/file/d/1s_FEeSbVqyZ4rarkHAI8utJMMD-_fDjW/view?usp=sharing \\\n",
+        "    -O /content/skin-cancer-malignant-vs-benign.zip"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2021-10-08 04:06:47--  https://storage.googleapis.com/mledu-datasets/cats_and_dogs_filtered.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 108.177.125.128, 142.250.157.128, 142.251.8.128, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|108.177.125.128|:443... connected.\n",
+            "--2021-11-11 13:02:50--  https://drive.google.com/file/d/1s_FEeSbVqyZ4rarkHAI8utJMMD-_fDjW/view?usp=sharing\n",
+            "Resolving drive.google.com (drive.google.com)... 74.125.70.138, 74.125.70.101, 74.125.70.113, ...\n",
+            "Connecting to drive.google.com (drive.google.com)|74.125.70.138|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
-            "Length: 68606236 (65M) [application/zip]\n",
-            "Saving to: ‘/tmp/cats_and_dogs_filtered.zip’\n",
+            "Length: unspecified [text/html]\n",
+            "Saving to: ‘/content/skin-cancer-malignant-vs-benign.zip’\n",
             "\n",
-            "/tmp/cats_and_dogs_ 100%[===================>]  65.43M  23.1MB/s    in 2.8s    \n",
+            "/content/skin-cance     [ <=>                ]  65.15K  --.-KB/s    in 0.001s  \n",
             "\n",
-            "2021-10-08 04:06:51 (23.1 MB/s) - ‘/tmp/cats_and_dogs_filtered.zip’ saved [68606236/68606236]\n",
+            "2021-11-11 13:02:50 (64.6 MB/s) - ‘/content/skin-cancer-malignant-vs-benign.zip’ saved [66710]\n",
             "\n"
           ]
         }
@@ -65,21 +66,65 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4rtnNrFsEDIf"
+        "id": "4rtnNrFsEDIf",
+        "outputId": "ae15b7d5-5a17-4d7f-d74e-d8f1ed9d01bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 380
+        }
       },
       "source": [
+        "\n",
         "# Ekstrak dataset\n",
         "\n",
         "import os\n",
         "import zipfile\n",
         "\n",
-        "local_zip = '/tmp/cats_and_dogs_filtered.zip'\n",
+        "local_zip = '/content/skin-cancer-malignant-vs-benign.zip'\n",
         "zip_ref = zipfile.ZipFile(local_zip, 'r')\n",
-        "zip_ref.extractall('/tmp')\n",
+        "zip_ref.extractall('/content')\n",
         "zip_ref.close()"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "BadZipFile",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mBadZipFile\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-00d6c5efd80e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mlocal_zip\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/content/skin-cancer-malignant-vs-benign.zip'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mzip_ref\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mzipfile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZipFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocal_zip\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0mzip_ref\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextractall\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mzip_ref\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.7/zipfile.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, file, mode, compression, allowZip64, compresslevel)\u001b[0m\n\u001b[1;32m   1256\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1257\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1258\u001b[0;31m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_RealGetContents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1259\u001b[0m             \u001b[0;32melif\u001b[0m \u001b[0mmode\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'x'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1260\u001b[0m                 \u001b[0;31m# set the modified flag so central directory gets written\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.7/zipfile.py\u001b[0m in \u001b[0;36m_RealGetContents\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m   1323\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mBadZipFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"File is not a zip file\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1324\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mendrec\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1325\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mBadZipFile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"File is not a zip file\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1326\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdebug\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1327\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mendrec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mBadZipFile\u001b[0m: File is not a zip file"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qa-6_ZD-Gt9Z",
+        "outputId": "31b1c8a6-fe13-44b2-8009-fcbafb3080ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!ls\n"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " sample_data\t\t\t      'Skin Cancer Malignant vs. Benign.zip'\n",
+            " skin-cancer-malignant-vs-benign.zip\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -89,12 +134,12 @@
       "source": [
         "# Definisikan path untuk data train dan data validation\n",
         "\n",
-        "base_dir = '/tmp/cats_and_dogs_filtered'\n",
+        "base_dir = '/content/skin-cancer-malignant-vs-benign.zip'\n",
         "\n",
         "train_dir = os.path.join(base_dir, 'train')\n",
         "validation_dir = os.path.join(base_dir, 'validation')"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -122,7 +167,7 @@
         "train_data = np.array(train_data)\n",
         "train_label = np.array(train_label)"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -147,7 +192,7 @@
         "val_data = np.array(val_data)\n",
         "val_label = np.array(val_label)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -166,7 +211,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m5VhnvtrEI1I",
-        "outputId": "5adf56ba-e40f-4e6b-fa51-4e37a68e33b5"
+        "outputId": "e9882ddb-7191-4f2d-8abe-0ef584509a95"
       },
       "source": [
         "# Tampilkan shape dari data train dan data validation\n",
@@ -175,16 +220,16 @@
         "print(\"Validation Data = \", val_data.shape)\n",
         "print(\"Validation Label = \", val_label.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Train Data =  (2000, 150, 150, 3)\n",
-            "Train Label =  (2000,)\n",
-            "Validation Data =  (1000, 150, 150, 3)\n",
-            "Validation Label =  (1000,)\n"
+            "Train Data =  (0,)\n",
+            "Train Label =  (0,)\n",
+            "Validation Data =  (0,)\n",
+            "Validation Label =  (0,)\n"
           ]
         }
       ]
@@ -193,10 +238,11 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 234
         },
         "id": "q1LVp6dCENne",
-        "outputId": "d1f3438c-cf0c-4bd9-9533-eec6b05b21b6"
+        "outputId": "5bcba109-a347-4cc8-8c8d-b34380696df5"
       },
       "source": [
         "# Normalisasi dataset\n",
@@ -206,14 +252,17 @@
         "x_val = val_data.astype('float32') / 255.0\n",
         "print(\"Data setelah di-normalisasi \", x_train[0][0][0])"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Data sebelum di-normalisasi  [ 79 105 117]\n",
-            "Data setelah di-normalisasi  [0.30980393 0.4117647  0.45882353]\n"
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-4441216bab9a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Normalisasi dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Data sebelum di-normalisasi \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mx_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'float32'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m255.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mx_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mval_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'float32'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;36m255.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
           ]
         }
       ]
